--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.card-title {
+  text-decoration: none;
+  color: #002550;
+}
+
 .card {
   margin: 0 auto 60px;
   max-width: 376px;
@@ -10,3 +15,4 @@
 .card-body p {
   text-align: left;
 }
+
