画像にリンクを設定

--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -16,3 +16,23 @@
   text-align: left;
 }
 
+.show-link {
+  color: #002550;
+}
+
+.user-link {
+  color:#002550;
+}
+
+.road-content {
+  color: #333333;
+}
+
+.user-name {
+  color: #333333;
+}
+
+.card-img-top {
+  width: '100%';
+  height: '180';
+}
