--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -8,20 +8,20 @@
           
             <div class="card-img-top">
               <% if road.road_images.attached? %>
-                <%= image_tag road.road_images.first, width: '100%', height: '180' %>
+                <%= link_to image_tag(road.road_images.first), road_path(road), width: '100%', height: '180' %>
               <% else %>
                 <%= image_tag "noimage.png", width: '100%', height: '180' %>
               <% end %>
             </div>  
 
             <div class="card-body">
-              <h5 class="card-title"><%= link_to "#{road.title}", road_path(road) %></h5>
-              <p class="card-title"><%= road.description.truncate(24, omission: '...') %></p>
+              <h5 class="card-title"><%= link_to "#{road.title}", road_path(road), {class: "show-link"} %></h5>
+              <p class="card-content"><%= road.description.truncate(24, omission: '...') %></p>
             </div>
             
             <div class="text-right pr-3 pb-2">
               <%= render partial: 'road', locals: {road: road} %>
-              <p>by <%= link_to "#{road.user.name}", user_path(road.user) %></p>
+              <p class="user-name">by <%= link_to "#{road.user.name}", user_path(road.user), {class: "user-link"} %></p>
               <% if current_user.id == road.user_id %>
                 <%= link_to "編集", edit_road_path(road), class: "btn btn-outline-warning btn-sm" %>
                 <%= link_to "削除", road_path(road), class: "btn btn-danger btn-sm", method: :delete, data: {confirm: "削除しますか？"} %>
