--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -32,7 +32,7 @@
   color: #333333;
 }
 
-.card-img-top {
-  width: '100%';
-  height: '180';
+.show-img-link {
+  width: 100%;
+  height: 180px;
 }
