--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -3,23 +3,23 @@
   <div class="row">
     <% @roads.each do |road| %>
       <div class="col mb-4">
-        <div class="card-group">
+        <div class="card-group display: fixed;" >
           <div class="card" style="width: 18rem;">
           
             <div class="card-img-top">
               <% if road.road_images.attached? %>
-                <%= link_to image_tag(road.road_images.first), road_path(road), width: '100%', height: '180' %>
+                <%= link_to image_tag(road.road_images.first, class: "show-img-link"), road_path(road) %>
               <% else %>
-                <%= image_tag "noimage.png", width: '100%', height: '180' %>
+                <%= link_to image_tag("noimage.png", class:"show-img-link"), road_path(road) %>
               <% end %>
             </div>  
 
-            <div class="card-body">
+            <div class="card-body mb-4">
               <h5 class="card-title"><%= link_to "#{road.title}", road_path(road), {class: "show-link"} %></h5>
               <p class="card-content"><%= road.description.truncate(24, omission: '...') %></p>
             </div>
             
-            <div class="text-right pr-3 pb-2">
+            <div class="text-right  pr-3 pb-2 mt-4">
               <%= render partial: 'road', locals: {road: road} %>
               <p class="user-name">by <%= link_to "#{road.user.name}", user_path(road.user), {class: "user-link"} %></p>
               <% if current_user.id == road.user_id %>
