スタイルを修正

--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -36,3 +36,9 @@
   width: 100%;
   height: 180px;
 }
+
+.btn-outline-warning {
+  color: #002550;
+  border: none;
+  background-color: #FFED00;
+}
