--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2 class="text-center py-5">投稿一覧</h2>
-    <div class="text-right">
+  <div class="text-right pr-5">
     <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-warning mb-3" %>
   </div>
   <div class="row col">
@@ -13,7 +13,7 @@
               <% if road.road_images.attached? %>
                 <%= link_to image_tag(road.road_images.first, class: "show-img-link"), road_path(road) %>
               <% else %>
-                <%= link_to image_tag("noimage.png", class:"show-img-link"), road_path(road) %>
+                <%= link_to image_tag("noimage-road.png", class:"show-img-link"), road_path(road) %>
               <% end %>
             </div>  
 
