--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,10 +1,22 @@
-<h1>投稿詳細</h1>
-<p>投稿者: <%= @road.user.name %></p>
-<p>投稿日時: <%= @road.created_at %></p>
-<%= @road.title %>
-<div id="map"></div>
+<div class="display-name">
+  <h2><%= @road.title %></h2>
+  <%= render 'road', {road: @road} %>
+</div>
 
-<%= render 'road', {road: @road} %>
+<div class="rdheader-info-box">
+  <div class="rdheader-subinfo">
+    <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
+  </div>
+  <div class="rdheader-subinfo">
+    <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
+  </div>
+</div>
+
+<div class="bx-controls bx-has-controls-direction">
+  <div class="bx-controls-direction">
+    <div id="map"></div>
+  </div>
+</div>
 
 <div id="roads" data-roads="<%= @roads.to_json %>"></div>
 <% if @road.road_images.attached? %>
