--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
   <h2 class="text-center py-5">投稿一覧</h2>
-  <div class="text-right pr-5">
+  <div class="d-flex justify-content-between">
+    <%= search_form_for @q do |f| %>
+      <%= f.label :title_cont, "タイトル" %>
+      <%= f.search_field :title_cont %>
+      <%= f.label :description_cont, "説明文" %>
+      <%= f.search_field :description_cont %>
+      <%= f.submit "検索" %>
+    <% end %>
+  </div>
+  <div class="text-right pt-3 pr-5">
     <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-warning mb-3" %>
   </div>
   <div class="row col">
