--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+// カード
+
 .card-title {
   text-decoration: none;
   color: #002550;
@@ -41,4 +43,17 @@
   color: #002550;
   border: none;
   background-color: #FFED00;
+}
+
+
+// 検索フォーム
+
+input[type="search"] {
+  width: 500px;
+  height: 40px
+}
+
+.search-field {
+  font-size: 12px;
+  padding-left: 5px;
 }
