--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,12 +1,11 @@
 <div class="container">
   <h2 class="text-center py-5">投稿一覧</h2>
-  <div class="d-flex justify-content-between">
+  <div class="d-flex justify-content-center">
     <%= search_form_for @q do |f| %>
-      <%= f.label :title_cont, "タイトル" %>
-      <%= f.search_field :title_cont %>
-      <%= f.label :description_cont, "説明文" %>
-      <%= f.search_field :description_cont %>
-      <%= f.submit "検索" %>
+      <%= f.search_field :title_or_description_cont, placeholder: "例) 定峰峠", class: "search-field" %>
+      <%= button_tag type: "submit" do %>
+        <i class="fas fa-search"></i>
+      <% end %>
     <% end %>
   </div>
   <div class="text-right pt-3 pr-5">
