--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,31 +1,28 @@
-<nav class="navbar navbar-light" style="background-color: #FFED00">
+<nav class="navbar navbar-expand-md navbar-light border-bottom">
   <a class="navbar-brand" href="/" style="color: #002550">
     <img src="favicon.png" alt="">
     Tamari-Ba
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu" aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <% if user_signed_in? %>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="responsiveMenu">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <%= link_to "トップページ", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= link_to "投稿一覧", roads_path, class: "nav-link" %>
+          <%= link_to "スポット一覧", roads_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "ユーザー一覧", users_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= "#{current_user.name}さん" %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             マイページ
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #FFED00">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-link" %>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしますか？" }, class: "nav-link" %>
           </div>
