navbarのボーダー修正

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -10,8 +10,8 @@
   border: none;
 }
 
-.border-bottom {
-  padding: 10px;
+.navbar-style {
+  border-bottom: 1.5px solid #002550;
 }
 
 .navbar-toggler {
