--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light border-bottom">
+<nav class="navbar navbar-expand-md navbar-light navbar-style">
   <a class="navbar-brand" href="/" style="color: #002550">
     <img src="favicon.png" alt="">
     Tamari-Ba
