画像を横並びに変更

--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -75,3 +75,12 @@ input[type="search"] {
 a {
   color: #002550;
 }
+
+.comment-form {
+  width: 300px;
+  height: 160px;
+}
+
+.comment-btn {
+  margin-top: 10px;
+}
