--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,66 +1,67 @@
-<div class="container mt-5">
-  <div class="row">
+<div class="container mx-auto">
+  <div class="container mt-5">
+    <div class="row">
 
-    <div class="col-sm">
-      <div id="map"></div>
+      <div class="col-md-4">
+        <div id="map"></div>
+      </div>
+      
+      <div class="col-md-4">
+          <h2><%= @road.title %></h2>
+          <%= render 'road', {road: @road} %>
+          <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
+          <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
+          <%= @road.description %>
+          <div class="d-flex justify-content-between mx-3">
+            <% if current_user.id == @road.user_id %>
+              <p>
+                <%= link_to "編集", edit_road_path(@road), class: "btn btn-outline-warning btn-sm" %>
+                <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
+              </p>
+            <% end %>
+          </div>
+      </div>
     </div>
-    
-    <div class="col-sm">
-        <h2><%= @road.title %></h2>
-        <%= render 'road', {road: @road} %>
-        <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
-        <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
-        <%= @road.description %>
-        <div class="d-flex justify-content-between mx-3">
-          <% if current_user.id == @road.user_id %>
-            <p>
-              <%= link_to "編集", edit_road_path(@road), class: "btn btn-outline-warning btn-sm" %>
-              <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
-            </p>
+  </div>
+
+  <div class="container mt-5">
+    <div id="roads" data-roads="<%= @roads.to_json %>"></div>
+      <% if @road.road_images.attached? %>
+        <div class="d-flex">
+          <% @road.road_images.each do |image| %>
+            <%= image_tag image, width: '35%', height: '35%' %>
           <% end %>
         </div>
+      <% end %>
     </div>
   </div>
-</div>
 
-<div class="container mt-5">
-  <div id="roads" data-roads="<%= @roads.to_json %>"></div>
-    <% if @road.road_images.attached? %>
-      <div class="d-flex">
-        <% @road.road_images.each do |image| %>
-          <%= image_tag image, width: '35%', height: '35%' %>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-sm-4">
+        <h4>コメント一覧</h4>
+          <% @comments.each do |c| %>
+              <a href="/users/<%= @road.user.id %>"><%= c.user.name %>: </a>
+              <%= c.content %>
+              <hr>
+          <% end %>
+      </div>
+
+      <div class="col-sm-4">
+        <%= form_for [@road, @comment] do |f| %>
+          <%= f.text_area :content, class: "comment-form" %>
+          <br>
+          <%= f.submit 'コメントする', class: "comment-btn btn btn-outline-warning" %>
         <% end %>
       </div>
-    <% end %>
-  </div>
-</div>
-
-<div class="container mt-5">
-  <h2>コメント一覧</h2>
-  <% @comments.each do |c| %>
-    <div>
-      <a href="/users/<%= @road.user.id %>"><%= c.user.name %></a>
-      <%= c.content %>
-      <hr>
     </div>
-  <% end %>
+  </div>
 
-  <%= form_for [@road, @comment] do |f| %>
-    <%= f.text_field :content, class: "comment-form" %>
-    <br>
-    <%= f.submit 'コメントする', class: "comment-btn" %>
-  <% end %>
+  <div class="text-center mt-5">
+    <p><%= link_to "投稿一覧へ", roads_path, class: "btn btn-outline-warning" %></p>
+  </div>
 
-  <p><%= link_to "投稿一覧へ", roads_path %></p>
 </div>
-
-
-
-
-
-
-
-
 <script>
 let mapInstance
 let geocoder
