--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -2,8 +2,33 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+// 共通
+
 body {
   color: #002550;
+}
+
+.title-field {
+  width: 500px;
+  font-size: 12px;
+  padding-left: 5px;
+  font-size: 12px;
+  padding-left: 5px;
+}
+
+.description-field {
+  resize: none;
+  width: 500px;
+  height: 200px;
+  font-size: 12px;
+  padding-left: 5px;
+}
+
+.latlng-field {
+  width: 150px;
+  border: none;
+  font-size: 12px;
+  padding-left: 5px;
 }
 
 // index
@@ -76,7 +101,7 @@ a {
   color: #002550;
 }
 
-.comment-form {
+.comment-field {
   resize: none;
   width: 300px;
   height: 160px;
@@ -85,4 +110,31 @@ a {
 .comment-btn {
   margin-top: 10px;
   text-align: right;
+}
+
+// new
+
+.area-search {
+  width: 500px;
+  height: 40px;
+  font-size: 12px;
+  padding-left: 5px;
+}
+
+.new-description {
+  resize: none;
+  width: 300px;
+  height: 160px;
+}
+
+.submit-btn {
+  width: 500px;
+  height: 40px;
+  color: #002550;
+  border: 1.5px solid #002550;
+  &:hover {
+    background-color: #002550;
+    color: #FFFFFF;
+    border: none;
+  }
 }
