--- a/app/views/roads/new.html.erb
+++ b/app/views/roads/new.html.erb
@@ -1,19 +1,32 @@
-<h1>新規投稿</h1>
-<h2>Google Maps</h2>
+<div class="container">
+  <h3 class="text-center py-5">新規投稿</h3>
 
-<input id="address" type="textbox">
-<input type="button" value="検索" placeholder="検索してマップを移動できます" onclick="searchArea()">
+  <div class="mt-3">
+    <input id="address" class="area-search" type="textbox" placeholder="検索してマップを移動できます">
+    <input type="button" value="検索" onclick="searchArea()">
+  </div>
 
-<div id="map"></div>
+  <div id="map" class="mt-3"></div>
 
-<%= form_with model: @road, local: true do |f| %>
-  <p>緯度: <%=f.text_field :latitude %></p>
-  <p>経度: <%=f.text_field :longitude %></p>
-  <p>タイトル:<%= f.text_field :title %></p>
-  <p>コメント:<%= f.text_field :description %></p>
-  <%= f.file_field :road_images, multiple: true %>
-  <%= f.submit "投稿" %>
-<% end %>
+  <%= form_with model: @road, local: true do |f| %>
+    <div class="d-flex mt-3">
+      <p>緯度: <%=f.text_field :latitude, class: "latlng-field" %></p>
+      <p class="ml-3">経度: <%=f.text_field :longitude, class: "latlng-field" %></p>
+    </div>
+    <div class="row mt-3">
+      <p><%= f.text_field :title, placeholder: "タイトルを入力", class: "title-field" %></p>
+    </div>
+    <div class="row mt-3">
+      <p><%= f.text_area :description, placeholder: "説明文を入力", class: "description-field" %></p>
+    </div>
+    <div class="row mt-3">
+      <%= f.file_field :road_images, multiple: true %>
+    </div>
+    <div class="row mt-3">
+      <%= f.submit "投稿", class: "btn btn-outline-primary submit-btn" %>
+    </div>
+  <% end %>
+</div>
 
 
 <script>
@@ -68,8 +81,10 @@ function searchArea() {
   }); 
 }
 </script>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+
 <style>
 #map {
   height: 600px;
