--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -49,7 +49,7 @@
 
       <div class="col-sm-4">
         <%= form_for [@road, @comment] do |f| %>
-          <%= f.text_area :content, class: "comment-form" %>
+          <%= f.text_area :content, class: "comment-field" %>
           <br>
           <%= f.submit 'コメントする', class: "comment-btn btn btn-outline-warning" %>
         <% end %>
@@ -62,6 +62,8 @@
   </div>
 
 </div>
+
+
 <script>
 let mapInstance
 let geocoder
