--- a/app/views/roads/edit.html.erb
+++ b/app/views/roads/edit.html.erb
@@ -1,23 +1,25 @@
-<div class="container">
+<div class="container mx-auto">
   <h3 class="text-center py-5">編集</h3>
 
-  <div class="mt-3">
+  <div class="search text-center mt-3">
     <input id="address" class="area-search" type="textbox" placeholder="検索してマップを移動できます">
-    <input type="button" value="検索" onclick="searchArea()">
+    <input class="mx-auto" type="button" value="検索" onclick="searchArea()">
   </div>
 
-  <div id="map" class="mt-3"></div>
+  <div id="map" class="mx-auto mt-3"></div>
 
   <%= form_with model: @road, local: true do |f| %>
     <div class="d-flex mt-3">
-      <p>緯度: <%=f.text_field :latitude, class: "latlng-field" %></p>
-      <p>経度: <%=f.text_field :longitude, class: "latlng-field" %></p>
+      <p class="mx-auto">
+        緯度: <%=f.text_field :latitude, class: "latlng-field mx-auto" %>
+        経度: <%=f.text_field :longitude, class: "latlng-field mx-auto" %>
+      </p>
     </div>
 
       <% if @road.road_images.present? %>
-        <p>現在投稿されている画像(削除するものはチェックしてください)</p>
+        <p class="text-center">現在投稿されている画像(削除するものはチェックしてください)</p>
         <% @road.road_images.each do |image| %>
-        <p>
+        <p class="d-flex justify-content-center">
           <%= f.check_box :road_image_ids, {multiple: true}, image.id, false %>
           <%= image_tag image, width: '35%', height: '35%' %>
         </p>
@@ -25,15 +27,21 @@
       <% end %>
     
     <div class="row mt-3">
-      <%= f.label :title, "タイトル: " %>
-      <p><%= f.text_field :title, class: "title-field" %></p>
+      <div class="text-center">
+        <%= f.label :title, "タイトル: " %>
+        <div class="text-center">
+          <p><%= f.text_field :title %></p>
+        </div>
+      </div>
     </div>
     <div clas="row mt-3">
       <%= f.label :description, "説明文: " %>
-      <p><%= f.text_area :description, class: "description-field"  %></p>
+      <p><%= f.text_area :description, class: "description-field" %></p>
     </div>
     <div class="row mt-3">
-      <%= f.submit '更新する', class: "btn btn-outline-primary submit-btn" %>
+      <div class="mx-0">
+        <%= f.submit '更新する', class: "btn btn-outline-primary submit-btn" %>
+      </div>
     </div>
   <% end %>
 </div>
