--- a/app/views/roads/edit.html.erb
+++ b/app/views/roads/edit.html.erb
@@ -26,23 +26,16 @@
         <% end %>
       <% end %>
     
-    <div class="row mt-3">
       <div class="text-center">
-        <%= f.label :title, "タイトル: " %>
+        <%= f.label :title, "タイトル" %>
         <div class="text-center">
           <p><%= f.text_field :title %></p>
         </div>
-      </div>
-    </div>
-    <div clas="row mt-3">
-      <%= f.label :description, "説明文: " %>
-      <p><%= f.text_area :description, class: "description-field" %></p>
-    </div>
-    <div class="row mt-3">
-      <div class="mx-0">
+        <%= f.label :description, "説明文" %>
+        <p><%= f.text_area :description, class: "description-field" %></p>
         <%= f.submit '更新する', class: "btn btn-outline-primary submit-btn" %>
       </div>
-    </div>
+
   <% end %>
 </div>
 
