--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
           <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
         </li>
         <li class="navbar-item">
-          <%= link_to "ゲストログイン(採用担当者様)", users_guest_sign_in_path, method: :post %>
+          <%= link_to "ゲストログイン(採用担当者様)", users_guest_sign_in_path, method: :post, class: "nav-link" %>
         </li>
       </ul>
     </div>
