--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,41 @@
-<h2>Sign up</h2>
+<div class="container mx-auto my-5">
+  <h2 class="text-center mb-5">サインアップ</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="text-center">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+      <div class="field my-5 login-form">
+        <%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true, placeholder: "アカウント名" %>
+      </div>
+
+      <div class="field my-5">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス" %>
+      </div>
+
+      <div class="field mt-5">
+        <div class="d-inline-flex">
+          <%= f.label :password %>
+        </div><br>
+        <% if @minimum_password_length %>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "6文字以上のパスワード" %>
+      </div>
+
+      <div class="field mb-5 mt-3">
+        <%= f.label :password_confirmation, "確認" %><br>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "確認用に再度入力" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "サインアップ", class: "btn btn-outline-primary login-btn" %>
+      </div>
+    <% end %>
+
+    <div class="text-center">
+      <%= link_to "ログインはこちら", user_session_path %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
