ユーザー詳細ページのスタイルを適用

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.container {
+.user-container {
   border: 1.5px solid #002550;
   padding: 50px;
 }
@@ -44,7 +44,7 @@ input[type="password"] {
   border-bottom: 1px solid;
 }
 
-.card {
+.user-card {
   height: 200px;
 }
 
