--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto my-5">
+<div class="container user-container mx-auto my-5">
   <h2 class="text-center mb-5">サインアップ</h2>
 
   <div class="text-center">
