--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
 
   <% @users.each do |user| %>
-    <div class="card" style="max-width: 540px;">
+    <div class="card user-card" style="max-width: 540px;">
       <div class="row no-gutters">
 
         <% if user.avatar.attached? %>
