--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "サインアップ", class: "btn btn-outline-primary login-btn" %>
+        <%= f.submit "サインアップ", class: "btn btn-outline-primary execute-btn" %>
       </div>
     <% end %>
 
