--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,7 +11,7 @@
   border: none;
 }
 
-.login-btn {
+.execute-btn {
   width: 300px;
   height: 40px;
   color: #FFF;
@@ -22,6 +22,20 @@
     color: #002550;
     border: 1.5px solid #002550;
   }
+}
+
+.warning-btn {
+  width: 300px;
+  height: 40px;
+  color: #002550;
+  background-color: #FFED00;
+  border: none;
+  &:hover {
+    background-color: #FFF;
+    color: #002550;
+    border: 1.5px solid #FFED00;
+  }
+  
 }
 
 input[type="text"] {
