--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,19 +1,25 @@
-<div class="container mx-auto">
-
-        <div id="map"></div>
-      
+<div class="container py-5">
+  <div class="container">
+    <div class="d-flex justify-content-center">
+      <div class="row">
+        <div class="col-md-4.offset-md-4">
+          <div id="map"></div>
+        </div>
+        <div class="col">
           <h2><%= @road.title %></h2>
           <%= render 'road', {road: @road} %>
           <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
           <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
           <%= @road.description %>
-            <% if current_user.id == @road.user_id %>
-              <p>
-                <%= link_to "編集", edit_road_path(@road), class: "btn btn-outline-warning btn-sm" %>
-                <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
-              </p>
-            <% end %>
-          </div>
+          <% if current_user.id == @road.user_id %>
+            <p>
+              <%= link_to "編集", edit_road_path(@road), class: "btn btn-outline-warning btn-sm" %>
+              <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
+            </p>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="container mt-5">
@@ -25,11 +31,10 @@
           <% end %>
         </div>
       <% end %>
-    </div>
   </div>
 
   <div class="container mt-5">
-    <div class="row">
+    <div class="d-flex justify-content-center">
       <div class="col-sm-4">
         <h4>コメント一覧</h4>
           <% @comments.each do |c| %>
@@ -43,7 +48,9 @@
         <%= form_for [@road, @comment] do |f| %>
           <%= f.text_area :content, class: "comment-field" %>
           <br>
-          <%= f.submit 'コメントする', class: "comment-btn btn btn-outline-warning" %>
+          <div class="text-right">
+            <%= f.submit 'コメントする', class: "comment-btn btn btn-outline-warning" %>
+          </div>
         <% end %>
       </div>
     </div>
