--- a/app/views/roads/new.html.erb
+++ b/app/views/roads/new.html.erb
@@ -1,30 +1,26 @@
-<div class="container">
-  <h3 class="text-center py-5">新規投稿</h3>
+<div class="container mx-auto py-5">
+  <h3 class="text-center">新規投稿</h3>
 
-  <div class="mt-3">
+  <div class="text-center mt-3">
     <input id="address" class="area-search" type="textbox" placeholder="検索してマップを移動できます">
     <input type="button" value="検索" onclick="searchArea()">
   </div>
 
-  <div id="map" class="mt-3"></div>
+    <div id="map" class="mx-auto mt-3"></div>
 
   <%= form_with model: @road, local: true do |f| %>
     <div class="d-flex mt-3">
-      <p>緯度: <%=f.text_field :latitude, class: "latlng-field" %></p>
-      
-      <p class="ml-3">経度: <%=f.text_field :longitude, class: "latlng-field" %></p>
+      <p class="mx-auto">
+        緯度: <%=f.text_field :latitude, class: "latlng-field" %>
+        経度: <%=f.text_field :longitude, class: "latlng-field" %>
+      </p>
     </div>
-    <div class="row mt-3">
+
+    <div class="text-center">
       <p><%= f.text_field :title, placeholder: "タイトルを入力", class: "title-field" %></p>
-    </div>
-    <div class="row mt-3">
       <p><%= f.text_area :description, placeholder: "説明文を入力", class: "description-field" %></p>
-    </div>
-    <div class="row mt-3">
-      <%= f.file_field :road_images, multiple: true %>
-    </div>
-    <div class="row mt-3">
-      <%= f.submit "投稿", class: "btn btn-outline-primary submit-btn" %>
+      <p><%= f.file_field :road_images, multiple: true, class:"mt-4" %></p>
+      <%= f.submit "投稿", class: "btn btn-outline-primary submit-btn my-5" %>
     </div>
   <% end %>
 </div>
