LPのログインボタンのリンクを修正

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -11,6 +11,10 @@
   color: var(--text-color);
 }
 
+.main-content {
+  color: var(--text-color);
+}
+
 .warning-btn {
   width: 300px;
   height: 40px;
