--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,12 @@
 
   <body>
     <header>
-      <% unless request.path.in?(["/"]) %>
+      <% if user_signed_in? %>
         <%= render 'layouts/header' %>
+      <% else %>
+        <% unless request.path.in?(["/"]) %>
+          <%= render 'layouts/header' %>
+        <% end %>
       <% end %>
     </header>
     <%= render "layouts/flash" %>
