--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,101 +1,68 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-        <!-- SimpleLightbox plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Masthead-->
-        <div class="site-blocks-cover overlay">
-          <header class="masthead main-container">
-          
-            <div class="container px-4 px-lg-5 h-100">
-                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="title-text">Tamari-Ba</h1>
-                        <hr class="divider" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="sub-text">Tamari-Baは全国のバイク乗りのおすすめスポットを投稿するWEBアプリ。<br>バイク乗りのTamari-Baで自分の好きな峠、シーサイド、道の駅などについて語ろう。</p>
-                        <div class="my-3">
-                          <a class="btn warning-btn" href="/users/sign_in">ユーザーとして使ってみる</a>
-                        </div>
-                        <div class="my-3">
-                          <a class="btn warning-btn" href="/users/guest_sign_in">採用担当者様はこちら</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </header>
-        <!-- About-->
-        <section class="page-section" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
-                        <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">自分のお気に入りのスポットを投稿！！</h2>
-                <hr class="divider" />
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+<body id="page-top">
+  <!-- Masthead-->
+  <div class="site-blocks-cover overlay">
+    <header class="masthead main-container">
+    
+      <div class="container px-4 px-lg-5 h-100">
+          <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+              <div class="col-lg-8 align-self-end">
+                  <h1 class="title-text">Tamari-Ba</h1>
+                  <hr class="divider" />
+              </div>
+              <div class="col-lg-8 align-self-baseline">
+                  <p class="sub-text">Tamari-Baは全国のバイク乗りのおすすめスポットを投稿するWEBアプリ。<br>バイク乗りのTamari-Baで自分の好きな峠、シーサイド、道の駅などについて語ろう。</p>
+                  <div class="my-3">
+                    <%= link_to "ログインはこちら", user_session_path, class: "btn warning-btn" %>
+                  </div>
+                  <div class="my-3">
+                    <%= link_to "ゲストログイン(採用担当者様)", users_guest_sign_in_path, method: :post, class: "btn warning-btn" %>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </header>
+  <!-- About-->
+  <section class="page-section content-list" id="about">
+    <div class="container px-4 px-lg-5">
+      <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col text-center">
+              <h2 class="text-white mt-0 py-5">What is Tamari-Ba?</h2>
+          </div>
+      </div>
+    </div>
 
-        <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Hiroto Iizuka</div></div>
-        </footer>
-    </body>
-</html>
+    <div class="container py-5">
+      <div class="row col">
+        <% @roads_latest3.each do |road| %>
+          <div class="col mb-4">
+            <div class="card-group display: fixed;" >
+              <div class="card d-flex" style="width: 18rem;">
+              
+                <div class="card-img-top">
+                  <% if road.road_images.attached? %>
+                    <%= image_tag(road.road_images.first, class: "show-img-link") %>
+                  <% else %>
+                    <%= image_tag("noimage-road.png", class:"show-img-link") %>
+                  <% end %>
+                </div>  
+
+                <div class="card-body mb-4">
+                  <h5 class="card-title"><%= road.title %></h5>
+                  <p class="card-content"><%= road.description.truncate(15, omission: '...') %></p> 
+                </div>
+                <div class="d-flex justify-content-between mx-3">
+                  <p class="user-name">by <%= road.user.name %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </section>
+  <!-- Footer-->
+  <footer class="bg-light py-5">
+      <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Hiroto Iizuka</div></div>
+  </footer>
+</body>
