LPのスタイル修正

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -41,7 +41,7 @@
   background-size: cover;
 }
 
-.site-blocks-cover.overlay:before {
+.overlay:before {
     position: absolute;
     content: "";
     left: 0;
