overlayをトップ画像の範囲に合わせる

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
   <div class="container py-5">
     <div class="row col">
       <% @roads_latest3.each do |road| %>
-        <div class="col mb-4">
+        <div class="col-xl-4 mb-4">
           <div class="card-group display: fixed;" >
             <div class="card d-flex" style="width: 18rem;">
             
