--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
 @import "navbar";
 @import "roads";
 @import "users";
-@import "roads";
+@import "homes";
 
 body {
   font-family: "Noto Sans JP";
