--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -37,7 +37,7 @@
 }
 
 .main-container {
-  background-image: image-url('images/tamari_ba_top.png');
+  background-image: image-url('tamari_ba_top.png');
   height: 800px;
   width: 100%;
   background-size: cover;
